// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeAlgoliaProduct does not error if passed empty object 1`] = `Object {}`;

exports[`normalizeAlgoliaProduct does not error if passed undefined 1`] = `Object {}`;

exports[`normalizeAlgoliaProduct normalizes partial product data 1`] = `
Object {
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "labels": Array [
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas",
  "price": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 9999,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "sku": "100000001",
  "tag": Object {
    "code": "outlet",
    "label": "Outlet",
  },
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas",
}
`;

exports[`normalizeAlgoliaProduct normalizes the data - with session channel 1`] = `
Object {
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-22%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "price": Object {
    "currency": "EUR",
    "value": 7777,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 7777,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "shortDescription": "Preparado vegetal con harina de algarroba ecológica, ideal para desayunos y meriendas",
  "sku": "100000000",
  "tag": Object {
    "code": "outlet",
    "label": "Outlet",
  },
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;

exports[`normalizeAlgoliaProduct normalizes the data - without session channel 1`] = `
Object {
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "price": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 9999,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "shortDescription": "Preparado vegetal con harina de algarroba ecológica, ideal para desayunos y meriendas",
  "sku": "100000000",
  "tag": Object {
    "code": "outlet",
    "label": "Outlet",
  },
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;

exports[`normalizeAlgoliaProduct retrieves correct url for locale 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
  },
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "gtin": "8428148462962",
  "images": Array [
    Object {
      "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
      "productHigh": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
      "productTileThumbnail": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
    },
  ],
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-11%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "manufacturerName": "LOreal Deutschland",
  "maxQuantity": 50,
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "netWeight": Object {
    "amount": 100,
    "unit": "Grams",
    "unitLabel": "g",
  },
  "price": Object {
    "currency": "EUR",
    "value": 8888,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 8888,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "pzn": "1234567",
  "rating": Object {
    "averageRating": 3.5,
    "numberOfReviews": 100,
  },
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "shortDescription": "Preparado vegetal con harina de algarroba ecológica, ideal para desayunos y meriendas",
  "sku": "100000000",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;

exports[`normalizeElasticSearchMinimalProduct does not error if passed empty object 1`] = `
Object {
  "alternativeUrls": Object {},
}
`;

exports[`normalizeElasticSearchMinimalProduct does not error if passed undefined 1`] = `
Object {
  "alternativeUrls": Object {},
}
`;

exports[`normalizeElasticSearchMinimalProduct normalizes partial product data 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas",
  },
  "availability": "AVAILABLE",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "labels": Array [
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-11%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas",
  "price": Object {
    "currency": "EUR",
    "value": 8888,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 8888,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "sku": "100000001",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas",
}
`;

exports[`normalizeElasticSearchMinimalProduct normalizes the data - with session channel 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
  },
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "gtin": "8428148462962",
  "images": Array [
    Object {
      "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
      "productHigh": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
      "productTileThumbnail": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
    },
  ],
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-22%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "manufacturerName": "LOreal Deutschland",
  "maxQuantity": 50,
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "netWeight": Object {
    "amount": 100,
    "unit": "Grams",
    "unitLabel": "g",
  },
  "price": Object {
    "currency": "EUR",
    "value": 7777,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 7777,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "pzn": "1234567",
  "rating": Object {
    "averageRating": 3.5,
    "numberOfReviews": 100,
  },
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "shortDescription": "Preparado vegetal con harina de algarroba ecológica, ideal para desayunos y meriendas",
  "sku": "100000000",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;

exports[`normalizeElasticSearchMinimalProduct normalizes the data - without session channel 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
  },
  "availability": "AVAILABLE",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-11%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "maxQuantity": 50,
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "price": Object {
    "currency": "EUR",
    "value": 8888,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 8888,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "rating": Object {
    "averageRating": 3.5,
    "numberOfReviews": 100,
  },
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "sku": "100000000",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;

exports[`normalizeElasticSearchMinimalProduct retrieves correct url for locale 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
  },
  "availability": "AVAILABLE",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-11%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "maxQuantity": 50,
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "price": Object {
    "currency": "EUR",
    "value": 8888,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 8888,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "rating": Object {
    "averageRating": 3.5,
    "numberOfReviews": 100,
  },
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "sku": "100000000",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;

exports[`normalizeElasticSearchProduct does not error if passed empty object 1`] = `
Object {
  "alternativeUrls": Object {},
}
`;

exports[`normalizeElasticSearchProduct does not error if passed undefined 1`] = `
Object {
  "alternativeUrls": Object {},
}
`;

exports[`normalizeElasticSearchProduct normalizes partial product data 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas",
  },
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "gtin": "3578830114626",
  "images": Array [
    Object {
      "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
      "productHigh": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
      "productTileThumbnail": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
    },
  ],
  "labels": Array [
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-11%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas",
  "price": Object {
    "currency": "EUR",
    "value": 8888,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 8888,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "sku": "100000001",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas",
}
`;

exports[`normalizeElasticSearchProduct normalizes the data - with session channel 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
  },
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "gtin": "8428148462962",
  "images": Array [
    Object {
      "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
      "productHigh": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
      "productTileThumbnail": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
    },
  ],
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-22%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "manufacturerName": "LOreal Deutschland",
  "maxQuantity": 50,
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "netWeight": Object {
    "amount": 100,
    "unit": "Grams",
    "unitLabel": "g",
  },
  "price": Object {
    "currency": "EUR",
    "value": 7777,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 7777,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "pzn": "1234567",
  "rating": Object {
    "averageRating": 3.5,
    "numberOfReviews": 100,
  },
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "shortDescription": "Preparado vegetal con harina de algarroba ecológica, ideal para desayunos y meriendas",
  "sku": "100000000",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;

exports[`normalizeElasticSearchProduct normalizes the data - without session channel 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
  },
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "gtin": "8428148462962",
  "images": Array [
    Object {
      "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
      "productHigh": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
      "productTileThumbnail": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
    },
  ],
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-11%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "manufacturerName": "LOreal Deutschland",
  "maxQuantity": 50,
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "netWeight": Object {
    "amount": 100,
    "unit": "Grams",
    "unitLabel": "g",
  },
  "price": Object {
    "currency": "EUR",
    "value": 8888,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 8888,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "pzn": "1234567",
  "rating": Object {
    "averageRating": 3.5,
    "numberOfReviews": 100,
  },
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "shortDescription": "Preparado vegetal con harina de algarroba ecológica, ideal para desayunos y meriendas",
  "sku": "100000000",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;

exports[`normalizeElasticSearchProduct retrieves correct url for locale 1`] = `
Object {
  "alternativeUrls": Object {
    "es-es": "",
    "pt-pt": "forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
  },
  "availability": "AVAILABLE",
  "brand": Object {
    "code": "atida",
    "label": "Atida",
  },
  "categories": Object {
    "lvl0": Array [
      "main",
    ],
  },
  "contentSizeFactor": 1,
  "description": "<p><strong>Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1</strong>
</p><p>¡Recupera la fuerza y vitalidad de tu cabello con Forcapil!
</p><p>Indicado para hombres y mujeres, este nutricosmético previene y combate la caída del pelo.
</p><p>Fórmula exclusivamente con ingredientes 100% de origen natural.
</p><p>Tiene una alta concentración en biotina, y su composición con aminoácidos, vitaminas, minerales y plantas favorece el crecimiento de la melena.
</p><p>Se recomienda tomar en momentos en los que sufrimos una mayor pérdida de cabello, causada por estrés, menopausia, tras el parto, cambios de estación...
</p><p><strong>Tratamiento para 3 meses: 2 + 1 de REGALO.</strong>
</p>",
  "enabled": true,
  "format": Object {
    "code": "shampooCode",
    "label": "Shampoo",
  },
  "gtin": "8428148462962",
  "images": Array [
    Object {
      "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
      "productHigh": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
      "productTileThumbnail": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
    },
  ],
  "labels": Array [
    Object {
      "label": "Free sponge",
      "type": "promotion",
    },
    Object {
      "label": "Outlet",
      "type": "pricing-tag-outlet",
    },
    Object {
      "label": "-11%",
      "type": "discount",
    },
  ],
  "largeImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20High-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "manufacturerName": "LOreal Deutschland",
  "maxQuantity": 50,
  "mediumImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Medium-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "metaDescription": "Meta description No contiene gluten. Apto para personas celíacas Meta description",
  "metaKeywords": "Meta keywords NaturGreen Algarroba Meta keywords",
  "metaTitle": "Meta title NaturGreen Algarroba a la Taza BIO 225gr Meta title",
  "name": "Forcapil Anti-Caída del Cabello Arkopharma 30 Cápsulas 2+1",
  "netWeight": Object {
    "amount": 100,
    "unit": "Grams",
    "unitLabel": "g",
  },
  "price": Object {
    "currency": "EUR",
    "value": 8888,
  },
  "pricePerUnit": Object {
    "currency": "EUR",
    "unit": "100 ml",
    "value": 8888,
  },
  "productDatImage": "https://sandbox-atida.bynder.com/transform/db2e62c0-2c32-4e50-bee7-1a7a421323f1/ean_img_8833772266123_0",
  "productTileImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "productTileRetinaImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Retina-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "pzn": "1234567",
  "rating": Object {
    "averageRating": 3.5,
    "numberOfReviews": 100,
  },
  "rrp": Object {
    "currency": "EUR",
    "value": 9999,
  },
  "shortDescription": "Preparado vegetal con harina de algarroba ecológica, ideal para desayunos y meriendas",
  "sku": "100000000",
  "thumbnailImage": "https://d2csxpduxe849s.cloudfront.net/media/07EADC8C-9435-4B3D-87CF5EDA882A36F2/F1974216-C01C-415C-B00F4AEBC6928147/Product%20Tile%20Thumbnail-51236DF8-2D7D-4757-AF2614FABA305C0A.png",
  "unitVolume": Object {
    "amount": 100,
    "unit": "MILLILITER",
    "unitLabel": "ml",
  },
  "url": "/forcapil-anti-caida-del-cabello-arkopharma-30-capsulas-2+1",
}
`;
